--- a/chapter3.tex
+++ b/chapter3.tex
@@ -458,7 +458,7 @@
       &= (v(x \mapsto F(x, q)) + w(y \mapsto F(p, y)))G(p, q) + (v(x \mapsto G(x, q)) + w(y \mapsto G(p, y)))F(p, q) \\
       &= \sigma(F)G(p, q) + \sigma(G)F(p, q).
   \end{align*}
-  We define $\Phi: TM \times TN \rightarrow T(M \times N)$ to be the map $(p, v) \times (q, w) \mapsto (p \times q, \sigma)$ as discussed above.
+  We define $\Phi: TM \times TN \rightarrow T(M \times N)$ to be the map $(p, v) \times (q, w) \mapsto ((p, q), \sigma)$ where $\sigma$ is defined as above.
   $\Phi$ is clearly well-defined, and we will show that $\Phi$ is smooth and bijective.
   \todo[inline,caption={}]{
     Finish this!
