--- a/chapter3.tex
+++ b/chapter3.tex
@@ -355,7 +355,7 @@
   Without loss of generality, $\phi(p) = 0 \in \mathbb{R}^n$.
   Now, define $\hat{\gamma}: (-\epsilon, \epsilon) \rightarrow \hat{U}$ by $\hat{\gamma}(t) = (tv_1, \cdots, tv_n)$ for sufficiently small $\epsilon > 0$.
   Let $\gamma: (-\epsilon, \epsilon) \rightarrow U$ be defined by $\gamma = \phi^{-1} \circ \hat{\gamma}$.
-  Then $\gamma$ is actually a smooth map from a 1-manifold $(-\epsilon, \epsilon)$ to a $n$-manifold $M$ (with or without boundary).
+  Then $\gamma$ is actually a smooth map from a 1-manifold $(-\epsilon, \epsilon)$ to an $n$-manifold $M$ (with or without boundary).
   We will use the formula derived in (\ref{jacobian_differentials}) and obtain
   \begin{align*}
     \gamma'(0)
