Finish proving proposition 3.23

--- a/chapter3.tex
+++ b/chapter3.tex
@@ -364,6 +364,8 @@
       &= \sum_{j=1}^{n}v^j\frac{\partial}{\partial x^j}\Big\vert_{p} \\
       &= v.
   \end{align*}
+
+  If $p \in \partial M$, then we do the exact same thing as above except that the domain will be $[0, \epsilon)$ if $v_n > 0$ and $(-\epsilon, 0]$ if $v_n \leq 0$.
 \end{proof}
 
 \subsection{Problems}
