--- a/chapter3.tex
+++ b/chapter3.tex
@@ -368,7 +368,7 @@
   If $p \in \partial M$, then we do the exact same thing as above except that the domain will be $[0, \epsilon)$ if $v_n > 0$ and $(-\epsilon, 0]$ if $v_n \leq 0$.
 \end{proof}
 
-\begin{customthm}{3.24}
+\begin{customthm}{3.24}\label{proposition_3_24}
   Let $F: M \rightarrow N$ be a smooth map, and let $\gamma: J \rightarrow M$ be a smooth curve.
   For any $t_0 \in J$, the velocity at $t = t_0$ of the composite curve $F \circ \gamma: J \rightarrow N$ is given by
   \begin{align*}
@@ -396,10 +396,9 @@
   for any smooth curve $\gamma: J \rightarrow M$ such that $0 \in J, \gamma(0) = p$, and $\gamma'(0) = v$.
 \end{customthm}
 
+
 \begin{proof}
-  \todo[inline,caption={}]{
-    Finish this!
-  }
+  This is a special case of (\ref{proposition_3_24}) where $t_0 = 0$.
 \end{proof}
 
 \subsection{Problems}
