--- a/dictionary.tex
+++ b/dictionary.tex
@@ -185,6 +185,15 @@
   If $M$ is a manifold with or without boundary, we define a \textit{curve in $M$} to be a continuous map $\gamma: J \rightarrow M$ where $J \subset \mathbb{R}$ is an interval.
 \end{defn}
 
+\begin{defn}[Velocity of a curve]
+  Let $\gamma: J \rightarrow M$ and $t_0 \in J$ be given.
+  The \textit{velocity of $\gamma$ at $t_0$}, denoted by $\gamma'(t_0)$ is the vector
+  \begin{align*}
+    \gamma'(t_0) = d\gamma(\frac{d}{dt}\Big\vert_{t_0}) \in T_{\gamma(t_0)}M,
+  \end{align*}
+  where $d/dt\vert_{t_0}$ is the standard coordinate basis vector in $T_{t_0}\mathbb{R}$.
+\end{defn}
+
 \subsection{Submersions, Immersions, and Embeddings}
 
 \begin{defn}[Rank]
