--- a/chapter3.tex
+++ b/chapter3.tex
@@ -140,7 +140,7 @@
   \end{enumerate}
 \end{proof}
 
-\begin{customthm}{3.10}
+\begin{customthm}{3.10}\label{proposition_3_10}
   If $M$ is an $n$-dimensional smooth manifold, then for each $p \in M$, the tangent space $T_pM$ is an $n$-dimensional vector space.
 \end{customthm}
 
