Add the definition of a local diffeomorphism

--- a/dictionary.tex
+++ b/dictionary.tex
@@ -224,3 +224,6 @@
   \end{itemize}
 \end{defn}
 
+\begin{defn}[Local Diffeomorphisms]
+  Let $M, N$ be smooth manifolds with or without boundary, a map $F: M \rightarrow N$ is called a local diffeomorphism if every point $p \in M$ has a neighbhorhood $U$ such that $F(U)$ is open in $N$ and $F\vert_U: U \rightarrow F(U)$ is a diffeomorphism.
+\end{defn}
