--- a/chapter4.tex
+++ b/chapter4.tex
@@ -99,6 +99,10 @@
       Every finite product of local diffeomorphisms between smooth manifolds is a local diffeomorphism.
     \item
       Every local diffeomorphism is a local homeomorphism and an open map.
+    \item
+      The restriction of a local diffeomorphism to an open subsmanifold with or without boundary is a local diffeomorphism.
+    \item
+      Every diffeomorphism is a local diffeomorphism.
   \end{enumerate}
 \end{customthm}
 
@@ -130,5 +134,12 @@
       Since $F(U_p)$ is open, $F(U_p \cap U)$ is open in $N$.
       Then $F(U_p \cap U) = F(U_p) \cap F(U)$ is open in $N$.
       Since $F(U) = \cup_{p \in U} (F(U_p) \cap F(U))$, $F(U)$ is open in $N$.
+    \item
+      \todo[inline,caption={}]{
+        Solve this!
+      }
+    \item
+      Let $F:M \rightarrow N$ be a diffeomorphism.
+      For every point $p \in M$, the ``restriction" of $F$ to $M$ satisfies the definition.
   \end{enumerate}
 \end{proof}
