--- a/chapter4.tex
+++ b/chapter4.tex
@@ -103,6 +103,8 @@
       The restriction of a local diffeomorphism to an open subsmanifold with or without boundary is a local diffeomorphism.
     \item
       Every diffeomorphism is a local diffeomorphism.
+    \item
+      Every bijective local diffeomorphism is a diffeomorphism.
   \end{enumerate}
 \end{customthm}
 
@@ -144,5 +146,7 @@
     \item
       Let $F:M \rightarrow N$ be a diffeomorphism.
       For every point $p \in M$, the ``restriction" of $F$ to $M$ satisfies the definition.
+    \item
+      A local diffeomorphism is smooth, so a bijective local diffeomorphism is a diffeomorphism.
   \end{enumerate}
 \end{proof}
