--- a/chapter4.tex
+++ b/chapter4.tex
@@ -54,7 +54,7 @@
   \end{enumerate}
 \end{proof}
 
-\begin{customexer}{4.4}
+\begin{customexer}{4.4}\label{exercise_4_4}
   Show that a composition of smooth submersions is a smooth submersion, and a composition of smooth immersions is a smooth immersion.
   Give a counterexample to show that a composition of maps of constant rank need not have constant rank.
 \end{customexer}
@@ -208,4 +208,14 @@
       &= (cx^1 + y^1, \cdots, cx^r + y^r, 0, \cdots, 0) \\
       &= c(x^1, \cdots, x^r, 0, \cdots, 0) + (y^1, \cdots, y^r, 0, \cdots, 0).
   \end{align*}
+\end{proof}
+
+\begin{customexer}{(4.16)}
+  Show that every composition of smooth embeddings is a smooth embedding.
+\end{customexer}
+
+\begin{proof}
+  We showed that a composition of smooth immersions is a smooth immersion in (\ref{exercise_4_4}).
+  Every composition of topological embeddings is a topological embedding.
+  Therefore, every composition of smooth embeddings is a smooth embedding.
 \end{proof}
