--- a/chapter4.tex
+++ b/chapter4.tex
@@ -219,3 +219,21 @@
   Every composition of topological embeddings is a topological embedding.
   Therefore, every composition of smooth embeddings is a smooth embedding.
 \end{proof}
+
+\begin{customexmp}{(4.17)}
+  $ $
+  \begin{enumerate}[label=(\alph*)]
+    \item 
+      If $M$ is a smooth manifold with or without boundary and $U \subset M$ is an open submanifold, the inclusion map $U \mapsto M$ is a smooth embedding.
+  \end{enumerate}
+\end{customexmp}
+
+\begin{proof}
+  $ $
+  \begin{enumerate}[label=(\alph*)]
+    \item 
+      $i$ is clearly a topological embedding.
+      By Proposition 3.9, $di_p: T_pU \rightarrow T_pM$ is an isomorphism for each $p \in U$.
+      Therefore, $i$ is a smooth immersion, which means $i$ is a smooth embedding.
+  \end{enumerate}
+\end{proof}
