--- a/introduction_to_smooth_manifolds_notes.tex
+++ b/introduction_to_smooth_manifolds_notes.tex
@@ -49,6 +49,11 @@
   {\renewcommand\theinnercustomthm{#1}\innercustomthm}
   {\endinnercustomthm}
 
+\newtheorem{innercustomexmp}{Example}
+\newenvironment{customexmp}[1]
+  {\renewcommand\theinnercustomthm{#1}\innercustomthm}
+  {\endinnercustomthm}
+
 \theoremstyle{remar}
 \newtheorem*{rem}{Remark}
 \newtheorem{rems}[thm]{Remarks}
